--- a/src/main/resources/templates/html_resources/product.html
+++ b/src/main/resources/templates/html_resources/product.html
@@ -22,7 +22,7 @@
                         <li><a th:href="@{/ComplexGym/products/gears}">Gears</a></li>
                     </ul>
                 </li>
-                <li><a href="#">SCHEDULE</a></li>
+                <li><a th:href="@{/ComplexGym/schedule}">SCHEDULE</a></li>
                 <li><a th:href="@{/ComplexGym/cart}"><i class="fa fa-shopping-cart" aria-hidden="true"></i> CART</a></li>
                 <li th:if="${role == 'Anonymous'}"><a th:href="@{/login}" type="button" class="button">LOGIN</a></li>
                 <li th:if="${role != 'Anonymous'}"><a class="welcome" href="#"><i
