--- a/src/main/resources/templates/html_resources/productDetail.html
+++ b/src/main/resources/templates/html_resources/productDetail.html
@@ -353,6 +353,7 @@
                         <li th:if="${role == 'ROLE_ADMIN'}"><a
                                 th:href="@{/ComplexGym/products/productManagement}">Product<br>management</a></li>
                         <li><a th:href="@{/ComplexGym/payment/ordersManagement}">Order<br>management</a></li>
+                        <li th:if="${role == 'ROLE_ADMIN'}"><a th:href="@{/ComplexGym/schedule/scheduleManagement}">Schedule<br>management</a></li>                                                                                                
                         <li><a th:href="@{/logout}">Logout</a></li>
                     </ul>
                 </li>
